--- a/tecolotl-web/src/main/webapp/resources/css/landing-esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/landing-esquadron.css
@@ -42,7 +42,11 @@
 }
 
 body{
-    background: url("#{resource['img/alumno/fondo-general.svg']}") no-repeat fixed center center/cover;
+    background-image: url("#{resource['img/alumno/fondo-general.svg']}");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Sniglet', sans-serif;
 }
 .menu-landing{
     background-color: rgba(255,255,255,0.6);
@@ -239,9 +243,24 @@ h2{
     font-weight: bold;
 }
 
+@media screen and (max-width: 1030px ) {
+    body {
+        background-image: url("#{resource['img/alumno/fondo-gral-ipad.svg']}");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+}
+
 @media screen and (max-width: 768px){
     .imagen-inicio > div:first-child + div{
         font-size: 100px;
+    }
+    body{
+        background-image: url("#{resource['img/alumno/fondo-gral-movil.svg']}");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
     }
 }
 
