--- a/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
@@ -182,3 +182,24 @@ table input[type="text"]{
     font-size: 12px;
     text-transform: none;
 }
+
+.boton-maestro-base{
+    background-color: var(--color-nav-primary);
+    padding: 8px 25px;
+    color:white;
+    font-weight: bold;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 20px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
+.boton-maestro-base:hover{
+    text-decoration: none;
+    background-color: var(--color-barra-nav);
+    color: white;
+}
