--- a/tecolotl-web/src/main/webapp/template/profesor/dashboard-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/dashboard-profesor.xhtml
@@ -13,7 +13,7 @@
         <ui:include src="nav1-profesor.xhtml"/>
    </header>
     <div class="section-color">
-        <div class="uk-container uk-flex uk-flex-left uk-flex-middle">
+        <div class="uk-container uk-flex uk-flex-between uk-flex-middle">
           <ui:insert name="menu"/>
         </div>
     </div>
