estilos al boton cerrar sesion en todas las vistas de profesor

--- a/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/dashboard-profesor.css
@@ -54,6 +54,7 @@ ul > li > span {
 
 .uk-container > ul + div > form > input + a{
     color: #1665B4;
+    font-size: 14px;
 }
 
 .scroll-profesor{
