--- a/tecolotl-web/src/main/webapp/resources/css/error/no-encontrado.css
+++ b/tecolotl-web/src/main/webapp/resources/css/error/no-encontrado.css
@@ -1,5 +1,5 @@
 *{
- box-sizing: border-box;
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
@@ -11,8 +11,7 @@ body{
     height: 100vh;
     justify-content: center;
     align-content: center;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 h1{
@@ -22,8 +21,23 @@ h1{
 }
 
 img{
-    display: block;
-    width: 25%;
+    transform: scale(0.8);
+}
+
+.btn-atras{
+    background-color: #a56192;
+    color: white;
+    border: 4px solid #8868b3;
+    border-radius: 35px;
+    padding-left: 40px;
+    padding-right: 40px;
+    height: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.centrado{
     display: flex;
     justify-content: center;
 }
