--- a/tecolotl-web/src/main/webapp/resources/css/profesor/mapa-mental.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/mapa-mental.css
@@ -43,7 +43,9 @@
 
 .acomodar{
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
+    -webkit-flex-direction: column;
 }
 
 .acomodar > p + span{
