--- a/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/biblioteca-profesor.css
@@ -32,8 +32,11 @@
 
 .uk-card-media-top {
     height: 200px;
+    display: -webkit-flex;
     display: flex;
+    -webkit-justify-content: center;
     justify-content: center;
+    -webkit-align-items: center;
     align-items: center;
 }
 
