--- a/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/gramatica.css
@@ -99,8 +99,12 @@ ul{
 
 .boton-regresa2{
     display: flex;
+    display: -webkit-flex;
     justify-content: flex-end;
+    -webkit-justify-content: flex-end;
     align-content: flex-end;
+    -webkit-align-content: flex-end ;
     flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
 }
 
