--- a/tecolotl-web/src/main/webapp/resources/css/profesor/no-grupo.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/no-grupo.css
@@ -40,5 +40,7 @@ img{
 
 .centrado{
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
+    -webkit-justify-content: center;
 }
