--- a/tecolotl-web/src/main/webapp/resources/css/profesor/tarea-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/tarea-alumno.css
@@ -1,7 +1,10 @@
 .boton-regresa{
     display: flex;
+    display: -webkit-flex;
     justify-content: flex-end;
+    -webkit-justify-content: flex-end;
     align-items: flex-end;
+    -webkit-align-items: flex-end;
 }
 
 .boton-maestro-base{
