--- a/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
@@ -212,3 +212,19 @@ table input[type="text"]{
     background-color: var(--color-barra-nav);
     color: white;
 }
+
+
+#formulario-modal-nuevo-profesor div:nth-child(9) {
+    display: grid;
+    grid-template-columns: 40px 40px 40px 40px 40px 40px 40px;
+    grid-template-rows: 40px 40px 40px 40px;
+    grid-column-gap: 25px;
+    grid-row-gap: 25px;
+    position: relative;
+    left: 32%;
+    margin-top: 30px;
+}
+
+.seleccionado {
+    transform: scale(1.5,1.5);
+}
