--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -54,3 +54,16 @@
 ul{
     list-style: none;
 }
+
+.califica{
+    background: linear-gradient(to right, orange, rebeccapurple);
+   /*background: transparent;*/
+    width: 100%;
+    height: 200px;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
