--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -62,6 +62,7 @@ ul{
     height: 200px;
     color: white;
     font-size: 20px;
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
