spinner pagina profesor

--- a/tecolotl-web/src/main/webapp/template/profesor/dashboard-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/dashboard-profesor.xhtml
@@ -9,6 +9,9 @@
 
 <ui:include src="header-profesor.xhtml"/>
 <h:body >
+    <div id="cargado" class="spinner spinner-open" >
+        <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""/>
+    </div>
    <header>
         <ui:include src="nav1-profesor.xhtml"/>
    </header>
