--- a/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
@@ -243,3 +243,57 @@ table input[type="text"]{
 .selector{
     height: 40px;
 }
+
+.uk-modal-body progress{
+    width: 120px;
+    height: 18px;
+    background-color: #00a8ec;
+    border: 1px solid black;
+}
+
+.uk-modal-body progress:indeterminate{
+    color: transparent;
+}
+
+.uk-modal-body progress::-webkit-progress-bar {
+    background-color: #00a8ec;
+    overflow: hidden;
+}
+
+/* 2 */
+.uk-modal-body progress:indeterminate::-moz-progress-bar {
+    width: 0;
+}
+
+/*
+ * Progress bar
+ * 1. Remove right border in IE11 and Edge
+ */
+.uk-modal-body progress::-webkit-progress-value {
+    background-color: #0079b9;
+    transition: width 0.6s ease;
+}
+
+.uk-modal-body progress::-moz-progress-bar {
+    background-color: #0079b9;
+}
+
+.uk-modal-body progress::-ms-fill {
+    background-color: #0079b9;
+    transition: width 0.6s ease;
+    /* 1 */
+    border: 0;
+}
+
+.uk-modal-body progress[value]{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    box-sizing: border-box;
+    background: darkgray;
+    width: 200px;
+    height: 40px;
+    border-radius: 20px;
+    border: solid 3px #00a8ec;
+    overflow: hidden;
+}
