--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -56,15 +56,18 @@ ul{
 }
 
 .califica{
-    background: linear-gradient(to right, orange, rebeccapurple);
+    background: linear-gradient(to right, rgb(0,0,0), rgb(0,0,51));
    /*background: transparent;*/
-    width: 100%;
-    height: 200px;
+    width: 110%;
+    height: 100%;
+    /*margin-left: 20px;*/
+    /*margin-right: 20px;*/
     color: white;
-    font-size: 20px;
+    font-size: 19px;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    position: absolute;
 }
