--- a/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/template-alumno.css
@@ -317,7 +317,9 @@ iframe {
     background-size: cover;
     background-position: center center;
     border:6px solid white;
-    padding: 20px 0;
+    padding:  0;
+    height: 300px;
+    box-sizing: border-box;
 }
 
 .fondo-comic6 {
