--- a/tecolotl-web/src/main/webapp/resources/css/esquadron.css
+++ b/tecolotl-web/src/main/webapp/resources/css/esquadron.css
@@ -524,7 +524,12 @@ padding-top: 38px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 100%;
+  /*background-color: #2AABE2;*/
+  /*border: 2px solid white;*/
+
 }
 .img-alumno-dashboard{
   width: 200px;
