--- a/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
+++ b/tecolotl-web/src/main/webapp/resources/css/profesor/csv-alumnos.css
@@ -44,6 +44,7 @@ table input[type="text"]{
     border: 2px solid #0e6dcd;
     border-radius: 30px;
     margin-top: 10px;
+    margin-right: 40px;
     justify-content: center;
     -webkit-justify-content: center;
     font-size: 18px;
