--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -71,3 +71,13 @@ ul{
     flex-direction: column;
     position: absolute;
 }
+
+.prueba{
+    background: url("https://i.ytimg.com/vi/70tcgH90Nx0/mqdefault.jpg")  center/100% 100%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 100;
+    top: 0;
+    left: 0;
+}
