mapa mental 10 y probar email

--- a/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/mapa-10.css
@@ -40,7 +40,10 @@
     color: white;
     font-family: Sans-serif;
 }
-
+.caja-input-10{
+    height: 50px;
+    box-sizing: content-box;
+}
 .caja-texto-10{
     box-sizing: content-box;
     min-height: 90px;
