--- a/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
@@ -14,25 +14,14 @@
 </div>
 <div class="left-content-box  content-box-dark">
     <h:graphicImage library="img" name="avatar/administrador.svg" styleClass="uk-svg uk-border-circle profile-img"/>
-    <h4 class="uk-text-center uk-margin-remove-vertical text-light">Noldi Vives</h4>
+    <h4 class="uk-text-center uk-margin-remove-vertical text-light">#{administracionControlador.administradorModelo.nombre} #{administracionControlador.administradorModelo.apellidoPaterno} #{administracionControlador.administradorModelo.apellidoMaterno}</h4>
     <div class="uk-position-relative uk-text-center uk-display-block">
         <!--<a href="#" class="uk-text-small uk-text-muted uk-display-block uk-text-center" data-uk-icon="icon: triangle-down; ratio: 0.7">Administrador</a> -->
         <h:outputLink styleClass="uk-text-small uk-text-muted uk-display-block uk-text-center" pt:data-uk-icon="icon: triangle-down; ratio: 1" value="#">Administrador</h:outputLink>
         <!-- user dropdown -->
         <h:panelGroup  layout="block" styleClass="uk-dropdown user-drop" pt:data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
             <ul class="uk-nav uk-dropdown-nav uk-text-left">
-                <!--<li><a href="#"><h:outputText pt:data-uk-icon="icon: info"/> Summary</a></li>
-                <li>
-                     <h:outputLink>
-                         <h:outputText pt:uk-icon="icon: info"/> Hola
-                     </h:outputLink>
-                </li>
-                <li><a href="#"><span data-uk-icon="icon: refresh"/> Edit</a></li>
-                <li><a href="#"><span data-uk-icon="icon: settings"/> Configuration</a></li>
-                <li class="uk-nav-divider"></li>
-                <li><a href="#"><span data-uk-icon="icon: image"/> Your Data</a></li>
-                <li class="uk-nav-divider"></li>-->
-                <li><a href="#"><h:outputText pt:data-uk-icon="icon: sign-out"/> Salir</a></li>
+                <li><h:form><h:commandLink value="#{etiqueta['close.sesion']}" actionListener="#{administracionControlador.cerrarSesion}"/></h:form></li>
             </ul>
         </h:panelGroup>
         <!-- /user dropdown -->
