--- a/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
+++ b/tecolotl-web/src/main/webapp/resources/css/estilos-landing.css
@@ -687,9 +687,9 @@ aside ul > li > a > img {
 }
 
 .prueba{
-    background: url("https://i.ytimg.com/vi/70tcgH90Nx0/mqdefault.jpg")  center/100% 100%;
+    background: transparent;
     width: 100%;
-    height: 100%;
+    height: 88%;
     position: absolute;
     z-index: 100;
     top: 0;
