Se despliega de forma correcta

--- a/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav1.xhtml
@@ -17,10 +17,13 @@
                     <ul class="uk-navbar-nav uk-visible@m">
                         <li>
                             <a href="#">
+                                <!--
                                 <h:outputText id="escuela-seleccion"
                                               value="#{empty escuelaPoblacionControlador.claveCentroTrabajo ?
                                               escuelaPoblacionControlador.nombreEscuela :
                                               escuelaPoblacionControlador.nombreEscuela.concat(' : ').concat(escuelaPoblacionControlador.claveCentroTrabajo) }"/>
+                                              -->
+                                Noldi Vives Quiñones
                             </a>
                         </li>
                         <!-- <li>
