Cierra de forma correcta la sesion del administrador

--- a/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
+++ b/tecolotl-web/src/main/webapp/template/administracion/nav2.xhtml
@@ -21,7 +21,7 @@
         <!-- user dropdown -->
         <h:panelGroup  layout="block" styleClass="uk-dropdown user-drop" pt:data-uk-dropdown="mode: click; pos: bottom-center; animation: uk-animation-slide-bottom-small; duration: 150">
             <ul class="uk-nav uk-dropdown-nav uk-text-left">
-                <li><h:form><h:commandLink value="#{etiqueta['close.sesion']}" actionListener="#{administracionControlador.cerrarSesion}"/></h:form></li>
+                <li><h:form><h:commandLink value="#{etiqueta['close.sesion']}" action="#{administracionControlador.cerrarSesion}"/></h:form></li>
             </ul>
         </h:panelGroup>
         <!-- /user dropdown -->
