--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -33,6 +33,17 @@
     margin-left: auto;
     margin-right: auto;
 }
+.video-alumno::after{
+    content: "";
+    display: block;
+    position:absolute;
+    width: 50px;
+    height: 30px;
+    background-color: transparent;
+    bottom: 0;
+    right: 0;
+    z-index: 100;
+}
 @media screen and (max-width: 1024px) {
     .vacio{
         width: 60%;
