--- a/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
+++ b/tecolotl-web/src/main/webapp/resources/css/alumno/dashboard.css
@@ -44,6 +44,29 @@
     right: 0;
     z-index: 100;
 }
+
+.finalVideo{
+    background: url("#{resource['img/esquadron.svg']}") no-repeat top left/90px,url("#{resource['img/esquadron.svg']}") no-repeat bottom right/90px;
+    background-color: #00002D!important;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.visibilidad{
+    display: none;
+}
+
+#botonply:hover svg{
+    fill: white;
+    cursor: pointer;
+}
 @media screen and (max-width: 1024px) {
     .vacio{
         width: 60%;
