cambie etiqueta graphicImage para insertar url que apunte al storage

--- a/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
@@ -11,6 +11,7 @@
 <h:head>
     <link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
     <h:outputStylesheet library="css" name="uikit.css" />
+    <link rel="stylesheet" href=""/>
     <h:outputStylesheet library="css" name="letra.css"/>
     <h:outputStylesheet library="css" name="navegacion.css"/>
     <h:outputStylesheet library="css" name="esquadron.css"/>
