--- a/tecolotl-web/src/main/webapp/template/profesor/nav1-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/nav1-profesor.xhtml
@@ -12,7 +12,7 @@
             <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar="">
                 <div class="padding-logo">
                     <a class="logo uk-logo" href="#">
-                        <h:graphicImage  library="img" name="/esquadron.svg"  alt="logo" title="logo" width="50px" height="50px"  />
+                        <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/esquadron.svg" alt="logo" title="logo" width="50px" height="50px"/>
                         <span class="lescuadron letra-logo uk-visible@m">squadron</span>
                     </a>
                 </div>
