cambio de etiquets graphicImage por img, outputStylesheet por link y outputScript por script para insertar url que apunte al storage

--- a/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/header-profesor.xhtml
@@ -11,12 +11,17 @@
 <h:head>
     <link  rel="shortcut icon"  href="#{resource['img/favicon.ico']}"/>
     <h:outputStylesheet library="css" name="uikit.css" />
-    <link rel="stylesheet" href=""/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/uikit.css"/>-->
     <h:outputStylesheet library="css" name="letra.css"/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/letra.css"/>-->
     <h:outputStylesheet library="css" name="navegacion.css"/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/navegacion.css"/>-->
     <h:outputStylesheet library="css" name="esquadron.css"/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/esquadron.css"/>-->
     <h:outputStylesheet library="css" name="/profesor/dashboard-profesor.css"/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/profesor/dashboard-profesor.css"/>-->
     <h:outputStylesheet library="css" name="spinner.css"/>
+<!--    <link rel="stylesheet" href="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/css/spinner.css"/>-->
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </h:head>
