cambio de etiquets graphicImage por img, outputStylesheet por link y outputScript por script para insertar url que apunte al storage en tarea-alumno.xhtml probado y terminado.

--- a/tecolotl-web/src/main/webapp/template/profesor/dashboard-profesor.xhtml
+++ b/tecolotl-web/src/main/webapp/template/profesor/dashboard-profesor.xhtml
@@ -10,7 +10,8 @@
 <ui:include src="header-profesor.xhtml"/>
 <h:body >
     <div id="cargado" class="spinner spinner-open" >
-        <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""/>
+<!--        <h:graphicImage library="img" name="/alumno/esquadron-animado.svg" pt:uk-svg=""/>-->
+        <img src="https://tecolotl-multimedia.nyc3.digitaloceanspaces.com/Tecolotl/resources/img/alumno/esquadron-animado.svg" class="uk-svg" alt=""/>
     </div>
    <header>
         <ui:include src="nav1-profesor.xhtml"/>
